--- a/SpringProjects/Languages/src/main/resources/static/CSS/style.css
+++ b/SpringProjects/Languages/src/main/resources/static/CSS/style.css
@@ -4,3 +4,14 @@
 	margin: 10px;
 	padding: 10px;
 }
+
+.away {
+	display: flex;
+	
+	justify-content: end;
+}
+
+.side {
+	display: flex;
+	flex-direction: row;
+}
